--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,6 +5,28 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
+		<header>
+		<nav> 
+		<aside id="phone">
+		<a href="tel:07776 034017"> 07776 034017 </a>
+		</aside>
+		<a class="mainnav" href="#services">Services</a>
+		<a class="mainnav" href="#equipment">Equipment</a>
+		<a class="mainnav" href="#engineers">Engineers</a>
+		<a class="mainnav" href="#">Contact</a>
+		<aside id="social">
+		<a href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts">
+		<img src="images/fb.png">
+		</a>
+		<a href="https://twitter.com/jbjstudio">
+		<img src="images/twitter.png">
+		</a>
+		</a>
+		<a href="https://www.youtube.com/user/JbjRecordingStudio">
+		<img src="images/youtube.png">
+		</a>
+		</aside>
+		</nav>
 		<h1>JBJ Studio</h1>
 		<p id="slogan">JBJ Studio is a commercial recording studio based in Uxbridge, West London. <br>
 		We pride ourselves in offering industry standard results at an affordable price.</p>
@@ -20,10 +42,11 @@
 		<p> Read More </p> 
 		</div>
 		</a>
+		</header>
 
-		<div class="blackdiv">
+		<section id="services" class="blacksection">
 		<div class="divcontent">
-		<h2 id="services">Services</h2>
+		<h2>Services</h2>
 		<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. </p>
 
 		<p>We offer a full range of services ranging from the following;</p>
@@ -36,20 +59,20 @@
 		<li>Sound Correction</li>
 		<li>Voiceover for TV/Film/Game</li>
 		</ul>	
-		<hr>
-		</div>	
-		</div>
 		
-		<div class="whitediv">
+		</div>	
+		</section>
+		
+		<section id="equipment" class="whitesection">
 		<div class="divcontent">
 		<h2>Equipment</h2>
 		<p>The heart of our West London recording studio is based around a vintage Amek Matchless console and a full pro-tools rig connected by short, high quality cable runs into our Lavry AD10 converters. Monitoring is provided by PMC Tb2, Yamaha NS10m and KRK 7000b. The engineers at JBJ Studio understand the importance of mic pre amps and we’re proud to offer our clients a choice between four focusrite red1's, 26 x AML 1081 Neve Clone and two Drawmer 1960 tube pre's. The microphone cupboard boasts a broad supply of Neumann, AKG, Shure, SE and Audio-Technica. We combine the best of analogue with the best of digital.
 		</p>
-		<hr>
+		
 		</div>
-		</div>
+		</section>
 	
-		<div class="blackdiv">
+		<section class="blacksection">
 		<div class="divcontent"> 	
 		<h2>Instruments</h2>
 		<ul>
@@ -72,35 +95,35 @@
 		<li>Electro Harmonix Big Muff</li>
 		<li>Boss Expression</li>
 		</ul>
-		<hr>
+		
 		</div>
-		</div>
+		</section>
 
 		
-		<div class="whitediv">
+		<section id="engineers" class="whitesection">
 		<div class="divcontent">
 		<h2>Engineers</h2>
 		<p/>Jamie has over 10 years of first hand experience engineering and mixing records at the top level, achieving multiple national and regional radio playlists for artists. Working with high profile musicians and producers in the best studios in the UK and all over the world has resulted in him working with Lucy Rose, Razorlight and Scouting for girls. <br> <br>
 		As JBJ's longest serving engineer and producer he has gained a thorough knowledge of both rooms and how to work successfully within them. Jamie has worked with producers such as Chris Potter, John Mitchell, Ed Buller, Tim Rowkins and Stuart Epps. </p>
-		<hr>
+		
 		</div>
-		</div>
+		</section>
 
-		<div class="blackdiv">
+		<section class="blacksection">
 		<div class="divcontent">
 		<h2>Clients</h2>		
 		<p>Lucy Rose, Razorlight, Scouting for girls, Apple, Vodafone, NHS...</p>
-		<hr>
+		
 		</div>
-		</div>
+		</section>
 
-		<div class="whitediv">
+		<section class="whitesection">
 		<div class="divcontent">
 		<h2>Voiceover</h2>
-		<p>Jbj studio has plenty of experience recording voiceovers and voice-to-picture, with clients ranging from Apple and Vodafone to the NHS. Sessions include an experienced engineer capable of editing your material quickly and efficiently and exporting your project in the format you need. Contact us now to discuss your project.</p>
-		<hr>
+		<p>JBJ studio has plenty of experience recording voiceovers and voice-to-picture, with clients ranging from Apple and Vodafone to the NHS. Sessions include an experienced engineer capable of editing your material quickly and efficiently and exporting your project in the format you need. Contact us now to discuss your project.</p>
+		
 		</div>
-		</div>
+		</section>
 
 	</body>
 </html>
