--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<title>JBJ Studio</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
-			<a href="tel:07776 034017" id="phone"> 07776 034017 </a>
+			<a href="tel:01895 238112" id="phone"> 01895 238112 </a>
 			<nav>
 				<a class="mainnav" href="#services">Services</a>
 				<a class="mainnav" href="#equipment">Equipment</a>
@@ -14,9 +15,10 @@
 				<a class="mainnav" href="#">Contact</a>
 			</nav>
 			<div>
-				<a href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts"><img src="images/fb.png"></a>
-				<a href="https://twitter.com/jbjstudio"><img src="images/twitter.png"></a>
-				<a href="https://www.youtube.com/user/JbjRecordingStudio"><img src="images/youtube.png"></a>
+				<a class="socicon-facebook" href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts"><!-- <img src="images/fb.png"> --></a>
+				<a class="socicon-twitter" href="https://twitter.com/jbjstudio"><!-- <img src="images/twitter.png"> --></a>
+				<a class="socicon-youtube" href="https://www.youtube.com/user/JbjRecordingStudio"><!-- <img src="images/youtube.png"> --></a>
+
 			</div>
 		</header>
 		<section id="splash">
@@ -44,7 +46,7 @@
 		<section id="equipment" class="whitesection">
 			<div class="divcontent">
 				<h2>Equipment</h2>
-				<p>The heart of our West London recording studio is based around a vintage Amek Matchless console and a full pro-tools rig connected by short, high quality cable runs into our Lavry AD10 converters. Monitoring is provided by PMC Tb2, Yamaha NS10m and KRK 7000b. The engineers at JBJ Studio understand the importance of mic pre amps and we’re proud to offer our clients a choice between four focusrite red1's, 26 x AML 1081 Neve Clone and two Drawmer 1960 tube pre's. The microphone cupboard boasts a broad supply of Neumann, AKG, Shure, SE and Audio-Technica. We combine the best of analogue with the best of digital.</p>
+				<p>The heart of our West London recording studio is based around a vintage Amek Matchless console and a full pro-tools rig connected by short, high quality cable runs into our Lavry AD10 converters. Monitoring is provided by PMC Tb2, Yamaha NS10m and KRK 7000b. The engineers at JBJ Studio understand the importance of mic pre amps and we're proud to offer our clients a choice between four focusrite red1's, 26 x AML 1081 Neve Clone and two Drawmer 1960 tube pre's. The microphone cupboard boasts a broad supply of Neumann, AKG, Shure, SE and Audio-Technica. We combine the best of analogue with the best of digital.</p>
 			</div>
 		</section>
 		<section class="blacksection">
@@ -61,7 +63,7 @@
 					<li>Mapex pro drum kit</li>
 					<li>Status 5 string bass</li>
 				</ul>
-			 	<h3>Pedals</h3>
+			 	<h2>Pedals</h2>
 				<ul>
 					<li>Electro Harmonix Hog</li>
 					<li>Artec analogue delay</li>
