updated image in html

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -84,7 +84,7 @@
 			<div class="divcontent">
 				<h2>Clients</h2>		
 				<div class="clientimg">Lucy Rose
-				<img src="images/lucyrose.jpg" alt="Lucy Rose" title="Lucy Rose">
+				<img src="images/lucyrose.JPG" alt="Lucy Rose" title="Lucy Rose">
 				</div>
 				<div class="clientimg">Razorlight
 				<img src="images/razorlight.jpg" alt="Razorlight" title="Razorlight">
