--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -28,7 +28,7 @@
 			<a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">Book A Recording</a>
 			<a href="#services">Read More</a>
 		</section>
-		<section id="services" class="blacksection">
+		<section id="services" class="blacksection clearfix">
 			<div class="twocolumn">
 				<h2>Services</h2>
 				<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. We offer a full range of services including writing, pre-production, recording, mixing, mastering, sound correction and voiceover for TV/Film/Game. For the most competitive prices in West London and a professional sounding outcome <a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">get in touch </a> today</p>
@@ -37,7 +37,7 @@
 				<iframe id="jbjvideo" style="display:inline" width="448" height="252" src="https://www.youtube.com/embed/MD5rMeJ_A2g?controls=1&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 			</div>	
 		</section>
-		<section id="equipment" class="whitesection">
+		<section id="equipment" class="whitesection clearfix">
 			<div class="twocolumn">
 				<h2>Equipment</h2>
 				<p>The heart of our West London recording studio is based around a vintage Amek Matchless console and a full pro-tools rig connected by short, high quality cable runs into our Lavry AD10 converters. Monitoring is provided by PMC Tb2, Yamaha NS10m and KRK 7000b. The engineers at JBJ Studio understand the importance of mic pre amps and we're proud to offer our clients a choice between four focusrite red1's, 26 x AML 1081 Neve Clone and two Drawmer 1960 tube pre's. The microphone cupboard boasts a broad supply of Neumann, AKG, Shure, SE and Audio-Technica. We combine the best of analogue with the best of digital.</p>
@@ -64,7 +64,7 @@
 			</div>
 
 		</section>
-		<section id="engineers" class="blacksection">
+		<section id="engineers" class="blacksection clearfix">
 			<h2>Engineers</h2>
 			<div class="twocolumn">
 				<img src="images/jb.jpg">
@@ -80,7 +80,7 @@
 				As a long time user of JBJ studio he has a thorough knowledge of the studio and access to a range of musicians to collaborate with on your next project. </p>
 			</div>
 		</section>
-		<section id="clients" class="whitesection">
+		<section id="clients" class="whitesection clearfix">
 			<div class="divcontent">
 				<h2>Clients</h2>		
 				<div class="clientimg">Lucy Rose
@@ -105,7 +105,7 @@
 
 			</div>
 		</section>
-		<section id="contact" class="blacksection">
+		<section id="contact" class="blacksection clearfix">
 			<div class="divcontent">
 				<h2>Contact</h2>
 				<div id="googlemap">
