--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -28,59 +28,64 @@
 			<a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">Book A Recording</a>
 			<a href="#services">Read More</a>
 		</section>
-		<section id="services" class="blacksection clearfix">
-			<div class="twocolumn">
-				<h2>Services</h2>
-				<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. We offer a full range of services including writing, pre-production, recording, mixing, mastering, sound correction and voiceover for TV/Film/Game. For the most competitive prices in West London and a professional sounding outcome <a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">get in touch </a> today</p>
-			</div>
-			<div class="twocolumn">
-				<iframe id="jbjvideo" style="display:inline" width="448" height="252" src="https://www.youtube.com/embed/MD5rMeJ_A2g?controls=1&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+		<section id="services" class="clearfix">
+			<div class="wrapper">
+				<div class="twocolumn">
+					<h2>Services</h2>
+					<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. We offer a full range of services including writing, pre-production, recording, mixing, mastering, sound correction and voiceover for TV/Film/Game. For the most competitive prices in West London and a professional sounding outcome <a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">get in touch </a> today</p>
+				</div>
+				<div class="twocolumn">
+					<iframe id="jbjvideo" style="display:inline" width="448" height="252" src="https://www.youtube.com/embed/MD5rMeJ_A2g?controls=1&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+				</div>	
 			</div>	
 		</section>
-		<section id="equipment" class="whitesection clearfix">
-			<div class="twocolumn">
-				<h2>Equipment</h2>
-				<p>The heart of our West London recording studio is based around a vintage Amek Matchless console and a full pro-tools rig connected by short, high quality cable runs into our Lavry AD10 converters. Monitoring is provided by PMC Tb2, Yamaha NS10m and KRK 7000b. The engineers at JBJ Studio understand the importance of mic pre amps and we're proud to offer our clients a choice between four focusrite red1's, 26 x AML 1081 Neve Clone and two Drawmer 1960 tube pre's. The microphone cupboard boasts a broad supply of Neumann, AKG, Shure, SE and Audio-Technica. We combine the best of analogue with the best of digital.</p>
-			</div>
-			<div class="twocolumn"> 	
-				<h2>Instruments & Pedals</h2>
-				<ul>
-					<li>USA Fender Telecaster x2</li>
-					<li>Martin DX1</li>
-					<li>Fender Jaguar</li>
-					<li>Fender Precision Bass</li>
-					<li>Roland D64 (fully weighted midi keyboard)</li>
-					<li>Roland TD6 (electric drum kit with brain)</li>
-					<li>Kemble Upright Piano</li>
-					<li>Mapex Pro Drum Kit</li>
-					<li>Status 5 String Bass</li>
-					<li>Electro Harmonix Hog</li>
-					<li>Artec Analogue Delay</li>
-					<li>Fulltone OCD</li>
-					<li>Blackstar HT DUAL</li>
-					<li>Electro Harmonix Big Muff</li>
-					<li>Boss Expression</li>
-				</ul>
-			</div>
-
+		<section id="equipment" class="clearfix">
+			<div class="wrapper">	
+				<div class="twocolumn">
+					<h2>Equipment</h2>
+					<p>The heart of our West London recording studio is based around a vintage Amek Matchless console and a full pro-tools rig connected by short, high quality cable runs into our Lavry AD10 converters. Monitoring is provided by PMC Tb2, Yamaha NS10m and KRK 7000b. The engineers at JBJ Studio understand the importance of mic pre amps and we're proud to offer our clients a choice between four focusrite red1's, 26 x AML 1081 Neve Clone and two Drawmer 1960 tube pre's. The microphone cupboard boasts a broad supply of Neumann, AKG, Shure, SE and Audio-Technica. We combine the best of analogue with the best of digital.</p>
+				</div>
+				<div class="twocolumn"> 	
+					<h2>Instruments & Pedals</h2>
+					<ul>
+						<li>USA Fender Telecaster x2</li>
+						<li>Martin DX1</li>
+						<li>Fender Jaguar</li>
+						<li>Fender Precision Bass</li>
+						<li>Roland D64 (fully weighted midi keyboard)</li>
+						<li>Roland TD6 (electric drum kit with brain)</li>
+						<li>Kemble Upright Piano</li>
+						<li>Mapex Pro Drum Kit</li>
+						<li>Status 5 String Bass</li>
+						<li>Electro Harmonix Hog</li>
+						<li>Artec Analogue Delay</li>
+						<li>Fulltone OCD</li>
+						<li>Blackstar HT DUAL</li>
+						<li>Electro Harmonix Big Muff</li>
+						<li>Boss Expression</li>
+					</ul>
+				</div>
+			</div>	
 		</section>
-		<section id="engineers" class="blacksection clearfix">
-			<h2>Engineers</h2>
-			<div class="twocolumn">
-				<img src="images/jb.jpg">
-				<h3>Jamie</h3>
-				<p>Jamie has over 10 years of first hand experience engineering and mixing records at the top level, achieving multiple national and regional radio playlists for artists. Working with high profile musicians and producers in the best studios in the UK and all over the world has resulted in him working with Lucy Rose, Razorlight and Scouting for girls. As JBJ's longest serving engineer and producer he has gained a thorough knowledge of both rooms and how to work successfully within them. Jamie has worked with producers such as Chris Potter, John Mitchell, Ed Buller, Tim Rowkins and Stuart Epps. </p>
-			</div>
-			<div class="twocolumn">
-				<img src="images/ac.jpg">
-				<h3>Alex</h3>
-				<p>Alex is a graduate of Music Technology from 
-				Amersham & Wycombe college and has experience in recording and producing bands from a variety of styles. 
-				Having played in punk rock and indie bands in the past a unique understanding between bands of these stlyes has been developed and previous artists worked with include Hang the Bastard, Since May and Ethan Beer.
-				As a long time user of JBJ studio he has a thorough knowledge of the studio and access to a range of musicians to collaborate with on your next project. </p>
-			</div>
+		<section id="engineers" class="clearfix">
+			<div class="wrapper">
+				<h2>Engineers</h2>
+				<div class="twocolumn">
+					<img src="images/jb.jpg" alt="Jamie Brown Profile Pic" title="Jamie Brown Photo">
+					<h3>Jamie Brown</h3>
+					<p>Jamie has over 10 years of first hand experience engineering and mixing records at the top level, achieving multiple national and regional radio playlists for artists. Working with high profile musicians and producers in the best studios in the UK and all over the world has resulted in him working with Lucy Rose, Razorlight and Scouting for girls. As JBJ's longest serving engineer and producer he has gained a thorough knowledge of both rooms and how to work successfully within them. Jamie has worked with producers such as Chris Potter, John Mitchell, Ed Buller, Tim Rowkins and Stuart Epps. </p>
+				</div>
+				<div class="twocolumn">
+					<img src="images/ac.jpg" alt="Alex Crowley Profile Pic" title="Alex Crowley Photo">
+					<h3>Alex Crowley</h3>
+					<p>Alex is a graduate of Music Technology from 
+					Amersham & Wycombe college and has experience in recording and producing bands from a variety of styles. 
+					Having played in punk rock and indie bands in the past a unique understanding between bands of these stlyes has been developed and previous artists worked with include Hang the Bastard, Since May and Ethan Beer.
+					As a long time user of JBJ studio he has a thorough knowledge of the studio and access to a range of musicians to collaborate with on your next project. </p>
+				</div>
+			</div>	
 		</section>
-		<section id="clients" class="whitesection clearfix">
+		<section id="clients" class="clearfix">
 			<div class="divcontent">
 				<h2>Clients</h2>		
 				<div class="clientimg">Lucy Rose
@@ -105,7 +110,7 @@
 
 			</div>
 		</section>
-		<section id="contact" class="blacksection clearfix">
+		<section id="contact" class="clearfix">
 			<div class="divcontent">
 				<h2>Contact</h2>
 				<div id="googlemap">
