--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -19,7 +19,7 @@
 				<a class="mainnav" href="#services">Services</a>
 				<a class="mainnav" href="#equipment">Equipment</a>
 				<a class="mainnav" href="#engineers">Engineers</a>
-				<a class="mainnav" href="#">Contact</a>	
+				<a class="mainnav" href="#contact">Contact</a>	
 			</nav>
 	
 		</header>
@@ -87,36 +87,25 @@
 			</div>	
 		</section>
 		<section id="clients" class="clearfix">
-			<div class="divcontent">
-				<h2>Clients</h2>		
-				<div class="clientimg">Lucy Rose
-				<img src="images/lucyrose.JPG" alt="Lucy Rose" title="Lucy Rose">
-				</div>
-				<div class="clientimg">Razorlight
-				<img src="images/razorlight.jpg" alt="Razorlight" title="Razorlight">
-				</div>
-				<div class="clientimg">Scouting For Girls
-				<img src="images/scoutingfor.jpg" alt="Scouting For Girls" title="Scouting For Girls">
-				</div>
-				<div class="clientimg">Apple
-				<img src="images/apple.jpg" alt="Apple" title="Apple">
-				</div>
-				<div class="clientimg">Vodafone
-				<img src="images/vodafone.jpg" alt="Vodafone" title="Vodafone">
-				</div>
-				<div class="clientimg">NHS
-				<img src="images/nhs.jpg" alt="NHS" title="NHS">
-				</div>
+			<div class="wrapper">
+				<h2>Clients</h2>
 
-
+				<ul>
+					<li><img src="images/lucyrose.JPG" alt="Lucy Rose" title="Lucy Rose"> Lucy Rose</li>
+					<li><img src="images/razorlight.jpg" alt="Razorlight" title="Razorlight"> Razorlight</li>
+					<li><img src="images/scoutingfor.jpg" alt="Scouting For Girls" title="Scouting For Girls"> Scouting For Girls</li>
+					<li><img src="images/apple.jpg" alt="Apple" title="Apple"> Apple</li>
+					<li><img src="images/vodafone.jpg" alt="Vodafone" title="Vodafone"> Vodafone</li>
+					<li><img src="images/nhs.jpg" alt="NHS" title="NHS"> NHS</li>
 			</div>
 		</section>
 		<section id="contact" class="clearfix">
 			<div class="divcontent">
 				<h2>Contact</h2>
 				<div id="googlemap">
-					Google Map Place Holder
+					<iframe src="https://www.google.com/maps/embed/v1/place?q=JBJ+Studio,+Uxbridge,+United+Kingdom&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe>
 				</div>
+				
 			</div>
 		</section>
 	</body>
