--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -66,6 +66,23 @@
 						<li>Boss Expression</li>
 					</ul>
 				</div>
+				<ul class="gallery">
+					<li><img src="images/equipment/nuemann1.jpg"></li>
+					<li><img src="images/equipment/nuemann2.jpg"></li>
+					<li><img src="images/equipment/microphones1.jpg"></li>
+					<li><img src="images/equipment/microphones2.jpg"></li>
+					<li><img src="images/equipment/neve.jpg"></li>
+					<li><img src="images/equipment/desk1.jpg"></li>
+					<li><img src="images/equipment/rack1.jpg"></li>
+					<li><img src="images/equipment/rack2.jpg"></li>
+					<li><img src="images/equipment/focusrite.jpg"></li>
+					<li><img src="images/equipment/lavry.jpg"></li>
+					<li><img src="images/equipment/amps1.jpg"></li>
+					<li><img src="images/equipment/orange.jpg"></li>
+					<li><img src="images/equipment/vox.jpg"></li>
+					<li><img src="images/equipment/piano1.jpg"></li>
+					<li><img src="images/equipment/piano2.jpg"></li>
+				</ul>
 			</div>	
 		</section>
 		<section id="engineers" class="clearfix">
@@ -91,22 +108,33 @@
 				<h2>Clients</h2>
 
 				<ul>
-					<li><img src="images/lucyrose.JPG" alt="Lucy Rose" title="Lucy Rose"> Lucy Rose</li>
-					<li><img src="images/razorlight.jpg" alt="Razorlight" title="Razorlight"> Razorlight</li>
-					<li><img src="images/scoutingfor.jpg" alt="Scouting For Girls" title="Scouting For Girls"> Scouting For Girls</li>
-					<li><img src="images/apple.jpg" alt="Apple" title="Apple"> Apple</li>
-					<li><img src="images/vodafone.jpg" alt="Vodafone" title="Vodafone"> Vodafone</li>
-					<li><img src="images/nhs.jpg" alt="NHS" title="NHS"> NHS</li>
+					<li><img src="images/clients/lucyrose.jpg" alt="Lucy Rose" title="Lucy Rose"> Lucy Rose</li>
+					<li><img src="images/clients/razorlight.jpg" alt="Razorlight" title="Razorlight"> Razorlight</li>
+					<li><img src="images/clients/scoutingfor.jpg" alt="Scouting For Girls" title="Scouting For Girls"> Scouting For Girls</li>
+					<li><img src="images/clients/apple.jpg" alt="Apple" title="Apple"> Apple</li>
+					<li><img src="images/clients/vodafone.jpg" alt="Vodafone" title="Vodafone"> Vodafone</li>
+					<li><img src="images/clients/nhs.jpg" alt="NHS" title="NHS"> NHS</li>
 			</div>
 		</section>
 		<section id="contact" class="clearfix">
-			<div class="divcontent">
+			<div class="wrapper">
 				<h2>Contact</h2>
-				<div id="googlemap">
-					<iframe src="https://www.google.com/maps/embed/v1/place?q=JBJ+Studio,+Uxbridge,+United+Kingdom&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe>
+				<div id="googlemapdiv">
+					<iframe id="googlemap" src="https://www.google.com/maps/embed/v1/place?q=JBJ+Studio,+Uxbridge,+United+Kingdom&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe>
 				</div>
-				
+				<div id="contactdetails">
+					<h3>Telephone - <a href="tel:01895 238112"> 01895 238112</a></h3>
+					<h3>Mobile - <a href="tel:07776 034017">07776 034017</a></h3>
+					<h3>E-Mail - <a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">enquiry@jbjstudio.co.uk</a></h3>
+					<a class="socicon-facebook contacticon" href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank"></a>
+					<a class="socicon-twitter contacticon" href="https://twitter.com/jbjstudio" target="_blank"></a>
+					<a class="socicon-youtube contacticon" href="https://www.youtube.com/user/JbjRecordingStudio" target="_blank"></a>
+				</div>
 			</div>
 		</section>
+		<footer>
+			<hr>
+			<p>&copy; JBJ Studio 2016 -- Website Design by Alex Crowley</p>
+		</footer>
 	</body>
 </html>
