--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -23,12 +23,13 @@
 			</nav>
 	
 		</header>
-		<section id="splash">
+		<video width="100%" autoplay="yes" loop="yes" preload="" src="jbj.mp4"></video>
+		<div id="splash">
 			<h1>JBJ Studio</h1>
 			<p class="slogan">JBJ Studio is a commercial recording studio based in Uxbridge, West London. We pride ourselves in offering industry standard results at an affordable price.</p>
 			<a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">Book A Recording</a>
 			<a href="#services">Read More</a>
-		</section>
+		</div>
 		<section id="services" class="clearfix">
 			<div class="wrapper">
 				<div class="twocolumn">
@@ -66,23 +67,23 @@
 						<li>Boss Expression</li>
 					</ul>
 				</div>
-				<ul class="gallery">
-					<li><img src="images/equipment/nuemann1.jpg"></li>
-					<li><img src="images/equipment/nuemann2.jpg"></li>
-					<li><img src="images/equipment/microphones1.jpg"></li>
-					<li><img src="images/equipment/microphones2.jpg"></li>
-					<li><img src="images/equipment/neve.jpg"></li>
-					<li><img src="images/equipment/desk1.jpg"></li>
-					<li><img src="images/equipment/rack1.jpg"></li>
-					<li><img src="images/equipment/rack2.jpg"></li>
-					<li><img src="images/equipment/focusrite.jpg"></li>
-					<li><img src="images/equipment/lavry.jpg"></li>
-					<li><img src="images/equipment/amps1.jpg"></li>
-					<li><img src="images/equipment/orange.jpg"></li>
-					<li><img src="images/equipment/vox.jpg"></li>
-					<li><img src="images/equipment/piano1.jpg"></li>
-					<li><img src="images/equipment/piano2.jpg"></li>
-				</ul>
+				<div class="gallery">
+					<img src="images/equipment/nuemann1.jpg">
+					<img src="images/equipment/nuemann2.jpg">
+					<img src="images/equipment/microphones1.jpg">
+					<img src="images/equipment/microphones2.jpg">
+					<img src="images/equipment/neve.jpg">
+					<img src="images/equipment/desk1.jpg">
+					<img src="images/equipment/rack1.jpg">
+					<img src="images/equipment/rack2.jpg">
+					<img src="images/equipment/focusrite.jpg">
+					<img src="images/equipment/lavry.jpg">
+					<img src="images/equipment/amps1.jpg">
+					<img src="images/equipment/orange.jpg">
+					<img src="images/equipment/vox.jpg">
+					<img src="images/equipment/piano1.jpg">
+					<img src="images/equipment/piano2.jpg">
+				</div>
 			</div>	
 		</section>
 		<section id="engineers" class="clearfix">
