--- a/harry/index.html
+++ b/harry/index.html
@@ -19,22 +19,22 @@
 
 	<h1>Harry Smith</h1>
 	<div class="wrapper">
-		<a href="images/Image-1.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-1.jpg" /></a>
-		<a href="images/Image-2.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-2.jpg" /></a>
-		<a href="images/Image-3.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-3.jpg" /></a>
-		<a href="images/Image-4.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-4.jpg" /></a>
-		<a href="images/Image-5.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-5.jpg" /></a>
-		<a href="images/Image-6.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-6.jpg" /></a>
-		<a href="images/Image-7.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-7.jpg" /></a>
-		<a href="images/Image-8.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-8.jpg" /></a>
-		<a href="images/Image-9.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-9.jpg" /></a>
-		<a href="images/Image-10.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-10.jpg" /></a>
-		<a href="images/Image-11.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-11.jpg" /></a>
-		<a href="images/Image-12.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-12.jpg" /></a>
-		<a href="images/Image-13.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-13.jpg" /></a>
-		<a href="images/Image-14.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-14.jpg" /></a>
-		<a href="images/Image-15.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-15.jpg" /></a>
-		<a href="images/Image-16.jpg" class="fancybox" class="fancybox" rel="gallery" title="Sample title"><img src="images/Image-16.jpg" /></a>
+		<a href="images/Image-1.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-1.jpg" /></a>
+		<a href="images/Image-2.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-2.jpg" /></a>
+		<a href="images/Image-3.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-3.jpg" /></a>
+		<a href="images/Image-4.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-4.jpg" /></a>
+		<a href="images/Image-5.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-5.jpg" /></a>
+		<a href="images/Image-6.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-6.jpg" /></a>
+		<a href="images/Image-7.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-7.jpg" /></a>
+		<a href="images/Image-8.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-8.jpg" /></a>
+		<a href="images/Image-9.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-9.jpg" /></a>
+		<a href="images/Image-10.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-10.jpg" /></a>
+		<a href="images/Image-11.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-11.jpg" /></a>
+		<a href="images/Image-12.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-12.jpg" /></a>
+		<a href="images/Image-13.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-13.jpg" /></a>
+		<a href="images/Image-14.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-14.jpg" /></a>
+		<a href="images/Image-15.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-15.jpg" /></a>
+		<a href="images/Image-16.jpg" class="fancybox" class="fancybox" rel="gallery" title="Harry Smith"><img src="images/Image-16.jpg" /></a>
 	</div>	
 </body>
 
