--- a/unit_7/index.html
+++ b/unit_7/index.html
@@ -80,21 +80,21 @@
 					</ul>
 				</div>
 				<div class="gallery">
-					<a class="fancybox" href="images/equipment/nuemann1.jpg" data-fancybox-group="gallery" title="Nuemann Microphones"><img src="images/equipment/nuemann1.jpg" alt="Nuemann Microphone">
-					<a class="fancybox" href="images/equipment/nuemann2.jpg" data-fancybox-group="gallery" title="Nuemann Microphones"><img src="images/equipment/nuemann2.jpg" alt="Nuemann Microphone">
-					<a class="fancybox" href="images/equipment/microphones1.jpg" data-fancybox-group="gallery" title="A Range of Microphones"><img src="images/equipment/microphones1.jpg" alt="JBJ Microphones">
-					<a class="fancybox" href="images/equipment/microphones2.jpg" data-fancybox-group="gallery" title="A Range of Microphones"><img src="images/equipment/microphones2.jpg" alt="JBJ Microphones">
-					<a class="fancybox" href="images/equipment/neve.jpg" data-fancybox-group="gallery" title="Neve EQ's"><img src="images/equipment/neve.jpg" alt="Neve EQ's">
-					<a class="fancybox" href="images/equipment/desk1.jpg" data-fancybox-group="gallery" title="Amek Matchless Console"><img src="images/equipment/desk1.jpg" alt="Amek Matchless Console">
-					<a class="fancybox" href="images/equipment/rack1.jpg" data-fancybox-group="gallery" title="Focusrite Pre's & Dramer Compressor"><img src="images/equipment/rack1.jpg" alt="JBJ Rack">
-					<a class="fancybox" href="images/equipment/rack2.jpg" data-fancybox-group="gallery" title="Focusrite Red Pre"><img src="images/equipment/rack2.jpg" alt="JBJ Rack">
-					<a class="fancybox" href="images/equipment/focusrite.jpg" data-fancybox-group="gallery" title="Focusrite Red Pre"><img src="images/equipment/focusrite.jpg" alt="Focusrite Red Pre Amp">
-					<a class="fancybox" href="images/equipment/lavry.jpg" data-fancybox-group="gallery" title="Lavry AD10 Converter"><img src="images/equipment/lavry.jpg" alt="Lavry AD10 Converter">
-					<a class="fancybox" href="images/equipment/amps1.jpg" data-fancybox-group="gallery" title="Guitar Amplifiers"><img src="images/equipment/amps1.jpg" alt="JBJ Guitar Amps">
-					<a class="fancybox" href="images/equipment/orange.jpg" data-fancybox-group="gallery" title="Orange Amps"><img src="images/equipment/orange.jpg" alt="Orange Amps">
-					<a class="fancybox" href="images/equipment/vox.jpg" data-fancybox-group="gallery" title="Vox Amps"><img src="images/equipment/vox.jpg" alt="Vox Amps">
-					<a class="fancybox" href="images/equipment/piano1.jpg" data-fancybox-group="gallery" title="Upright Piano"><img src="images/equipment/piano1.jpg" alt="JBJ Piano">
-					<a class="fancybox" href="images/equipment/piano2.jpg" data-fancybox-group="gallery" title="Upright Piano"><img src="images/equipment/piano2.jpg" alt="JBJ Piano">
+					<a class="fancybox" href="images/equipment/nuemann1.jpg" data-fancybox-group="gallery" title="Nuemann Microphones"><img src="images/equipment/nuemann1.jpg" alt="Nuemann Microphone"></a>
+					<a class="fancybox" href="images/equipment/nuemann2.jpg" data-fancybox-group="gallery" title="Nuemann Microphones"><img src="images/equipment/nuemann2.jpg" alt="Nuemann Microphone"></a>
+					<a class="fancybox" href="images/equipment/microphones1.jpg" data-fancybox-group="gallery" title="A Range of Microphones"><img src="images/equipment/microphones1.jpg" alt="JBJ Microphones"></a>
+					<a class="fancybox" href="images/equipment/microphones2.jpg" data-fancybox-group="gallery" title="A Range of Microphones"><img src="images/equipment/microphones2.jpg" alt="JBJ Microphones"></a>
+					<a class="fancybox" href="images/equipment/neve.jpg" data-fancybox-group="gallery" title="Neve EQ's"><img src="images/equipment/neve.jpg" alt="Neve EQ's"></a>
+					<a class="fancybox" href="images/equipment/desk1.jpg" data-fancybox-group="gallery" title="Amek Matchless Console"><img src="images/equipment/desk1.jpg" alt="Amek Matchless Console"></a>
+					<a class="fancybox" href="images/equipment/rack1.jpg" data-fancybox-group="gallery" title="Focusrite Pre's & Dramer Compressor"><img src="images/equipment/rack1.jpg" alt="JBJ Rack"></a>
+					<a class="fancybox" href="images/equipment/rack2.jpg" data-fancybox-group="gallery" title="Focusrite Red Pre"><img src="images/equipment/rack2.jpg" alt="JBJ Rack"></a>
+					<a class="fancybox" href="images/equipment/focusrite.jpg" data-fancybox-group="gallery" title="Focusrite Red Pre"><img src="images/equipment/focusrite.jpg" alt="Focusrite Red Pre Amp"></a>
+					<a class="fancybox" href="images/equipment/lavry.jpg" data-fancybox-group="gallery" title="Lavry AD10 Converter"><img src="images/equipment/lavry.jpg" alt="Lavry AD10 Converter"></a>
+					<a class="fancybox" href="images/equipment/amps1.jpg" data-fancybox-group="gallery" title="Guitar Amplifiers"><img src="images/equipment/amps1.jpg" alt="JBJ Guitar Amps"></a>
+					<a class="fancybox" href="images/equipment/orange.jpg" data-fancybox-group="gallery" title="Orange Amps"><img src="images/equipment/orange.jpg" alt="Orange Amps"></a>
+					<a class="fancybox" href="images/equipment/vox.jpg" data-fancybox-group="gallery" title="Vox Amps"><img src="images/equipment/vox.jpg" alt="Vox Amps"></a>
+					<a class="fancybox" href="images/equipment/piano1.jpg" data-fancybox-group="gallery" title="Upright Piano"><img src="images/equipment/piano1.jpg" alt="JBJ Piano"></a>
+					<a class="fancybox" href="images/equipment/piano2.jpg" data-fancybox-group="gallery" title="Upright Piano"><img src="images/equipment/piano2.jpg" alt="JBJ Piano"></a>
 				</div>
 			</div>	
 		</section>
